<resources>
    <string name="app_name">Sudoku</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="note">Note</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>
    <string name="fill_notes">Fill Notes</string>
    <string name="hint">Hint</string>
    <string name="title">Sudoku</string>
    <string name="new_game">Start New Game</string>
    <string name="load_game">Continue</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="extreme">Extreme</string>
    <string name="victory">You win!</string>
</resources>