<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/sudokuToolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:minHeight="?attr/actionBarSize"/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context=".view.PlaySudokuActivity">

    <com.example.sudoku.view.SudokuBoardView
        android:id="@+id/sudokuBoardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/toolsGrid"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="1:1"/>

    <GridLayout
        android:id="@+id/toolsGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="1"
        app:layout_constraintTop_toBottomOf="@id/sudokuBoardView"
        app:layout_constraintBottom_toBottomOf="@id/buttonsGrid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <Button
            android:id="@+id/buttonNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note" />

        <Button
            android:id="@+id/buttonUndo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undo" />

        <!-- <Button
            android:id="@+id/buttonHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint" /> -->

    </GridLayout>

    <GridLayout
        android:id="@+id/moreToolsGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="1"
        app:layout_constraintTop_toBottomOf="@id/toolsGrid"
        app:layout_constraintBottom_toTopOf="@id/buttonsGrid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/buttonFillNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_notes" />

    </GridLayout>

    <GridLayout
        android:id="@+id/buttonsGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moreToolsGrid">

        <Button
            android:id="@+id/buttonOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1" />

        <Button
            android:id="@+id/buttonTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2" />

        <Button
            android:id="@+id/buttonThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3" />

        <Button
            android:id="@+id/buttonFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4" />

        <Button
            android:id="@+id/buttonFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5" />

        <Button
            android:id="@+id/buttonSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6" />

        <Button
            android:id="@+id/buttonSeven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7" />

        <Button
            android:id="@+id/buttonEight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8" />

        <Button
            android:id="@+id/buttonNine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9" />


    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>