<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/menuToolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:minHeight="?attr/actionBarSize"/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context=".view.MenuActivity">

    <com.example.sudoku.view.MenuTitleView
        android:id="@+id/menuTitleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/optionsGrid"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="6:1"/>

    <GridLayout
        android:id="@+id/optionsGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuTitleView">

        <!-- <Button
            android:id="@+id/continueGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/load_game" /> -->

        <Button
            android:id="@+id/newGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/new_game" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/easyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/easy" />
            <RadioButton
                android:id="@+id/mediumButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medium" />
            <RadioButton
                android:id="@+id/hardButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hard" />
            <RadioButton
                android:id="@+id/extremeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extreme" />
        </RadioGroup>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>